--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.1.0",
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
+    "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
     "@mui/material-nextjs": "^6.1.4",
     "@types/styled-components": "^5.1.34",
