--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
     "@mui/material-nextjs": "^6.1.4",
+    "@mui/x-data-grid": "^7.21.0",
     "@types/styled-components": "^5.1.34",
     "@types/yup": "^0.29.14",
     "formik": "^2.4.6",
