--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
     "@mui/icons-material": "^6.1.4",
+    "@mui/lab": "^6.0.0-beta.13",
     "@mui/material": "^6.1.4",
     "@mui/material-nextjs": "^6.1.4",
     "@mui/x-data-grid": "^7.21.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "@types/styled-components": "^5.1.34",
     "@types/yup": "^0.29.14",
     "chart.js": "^4.4.5",
@@ -29,7 +31,9 @@
     "next": "14.2.15",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
+    "react-day-picker": "^9.1.4",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
     "styled-components": "^6.1.13",
     "yup": "^1.4.0"
   },
